--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "three": "^0.169.0"
   },
   "devDependencies": {
